Remove useless fields and restructure a bit.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -19,10 +19,7 @@ layout: default
             <div class="spacing"></div>
             <h4>Project Details</h4>
             <div class="hline"></div>
-            <p><b>Date:</b> {{ page.date | date: "%b %-d, %Y" }}</p>
-            <p><b>Author:</b> {{ page.author }}</p>
-            <p><b>Categories:</b> {{ page.categories }}</p>
-            <p><b>Partner:</b> {{ page.partner }}</p>
+            <p><b>Contributors:</b> {{ page.contributors | array_to_sentence_string }}</p>
             <p><b>Website:</b> <a href="{{ page.website }}">{{ page.website }}</a></p>
         </div>
     </div><! --/row -->
