--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,19 +14,19 @@
     <div class="spacing"></div>
     <h4>Categories</h4>
     <div class="hline"></div>
-    {% for category in site.categories %}{% unless category.first == "blog" or category.first == "project" or category.first == "question" %}
+    {% for category in site.categories %}
         <p>
             <a href="{{ '/category/#' | prepend: site.baseurl }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first }}</a>
             <span class="badge badge-theme pull-right">{{ category | last | size }}</span>
         </p>
-    {% endunless %}{% endfor %}
+    {% endfor %}
 
     <div class="spacing"></div>
 
     <h4>Recent Posts</h4>
     <div class="hline"></div>
         <ul class="popular-posts">
-            {% for post in site.categories['blog'] limit:4 %}
+            {% for post in site.posts limit:4 %}
                 <li>
                     <a href="{{ post.url | prepend: site.baseurl }}"><img src="{{ "/assets/img/blog/thumbs/" | prepend: site.baseurl }}{{ post.thumb }}" alt="{{ post.title }}"></a>
                     <p><a href="{{ post.url }}">{{ post.title }}</a></p>
@@ -41,7 +41,7 @@
     <div class="hline"></div>
     <p>
         {% for tag in site.tags %}
-            <a class="btn btn-theme" style="font-size: {{ tag | last | size | times: 100 | divided_by: site.categories.blog.size | times: 2 }}%" href="{{ '/tag/#' | prepend: site.baseurl }}{{ tag | first }}">
+            <a class="btn btn-theme" style="font-size: {{ tag | last | size | times: 100 | divided_by: site.posts.size | times: 2 }}%" href="{{ '/tag/#' | prepend: site.baseurl }}{{ tag | first }}">
                 {{ tag | first }}
             </a>
         {% endfor %}
