--- a/_includes/members.html
+++ b/_includes/members.html
@@ -8,16 +8,13 @@
             <img src="{{ "/assets/img/members/" | prepend: site.baseurl }}{{ member.img }}" alt="">
                 <div class="he-view">
                     <div class="bg a0" data-animate="fadeIn">
-                        <h3 class="a1" data-animate="fadeInDown">Find Me:</h3>
-                        {% for entry in member.social %}
-                            <a href="{{ entry.url }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-{{ entry.title }}"></i></a>
-                        {% endfor %}
+                        <h3 class="a1" data-animate="fadeInDown">{{ member.title }}</h3>
+                        <a href="{{ member.url | prepend: site.baseurl }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-eye"></i></a>
                     </div><!-- he bg -->
                 </div><!-- he view -->
             </div><!-- he wrap -->
-            <h4>{{ member.name }}</h4>
-            <h5 class="ctitle">{{ member.position }}</h5>
-            <p>{{ member.text }}</p>
+            <h4>{{ member.title }}</h4>
+            <h5 class="ctitle">{{ member.role }}</h5>
             <div class="hline"></div>
         </div><! --/col-lg-3 -->
         {% endfor %}
