--- a/_includes/members.html
+++ b/_includes/members.html
@@ -4,16 +4,8 @@
 
         {% for member in site.members %}
         <div class="col-lg-3 col-md-3 col-sm-3">
-            <div class="he-wrap tpl6">
-            <img src="{{ "/assets/img/members/" | prepend: site.baseurl }}{{ member.img }}" alt="">
-                <div class="he-view">
-                    <div class="bg a0" data-animate="fadeIn">
-                        <h3 class="a1" data-animate="fadeInDown">{{ member.title }}</h3>
-                        <a href="{{ member.url | prepend: site.baseurl }}" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-eye"></i></a>
-                    </div><!-- he bg -->
-                </div><!-- he view -->
-            </div><!-- he wrap -->
-            <h4>{{ member.title }}</h4>
+            <img src="{{ "/assets/img/members/" | prepend: site.baseurl }}{{ member.img }}" alt="{{ member.title }}" />
+            <h4 class="member"><a href="{{ member.url | prepend: site.baseurl }}">{{ member.title }}</a></h4>
             <h5 class="ctitle">{{ member.role }}</h5>
             <div class="hline"></div>
         </div><! --/col-lg-3 -->
