Allow projects to be ordered by reverse date.

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,8 +1,9 @@
 <div id="portfoliowrap">
     <div class="portfolio-centered">
         {% if include.title %}<h3>{{ include.title }}</h3>{% endif %}
+        {% if include.recent %}{% assign projects = site.projects | sort: 'date' | reverse %}{% else %}{% assign projects = site.projects %}{% endif %}
         <div class="recentitems portfolio">
-            {% for project in site.projects limit:include.limit %}
+            {% for project in projects limit:include.limit %}
                 <div class="portfolio-item graphic-design">
                     <div class="he-wrap tpl6">
                     <img src="{{ "/assets/img/project/" | prepend: site.baseurl }}{{ project.img }}" alt="">
