Add normalized names for category slugs.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
     <div class="hline"></div>
     {% for category in site.categories %}
         <p>
-            <a href="{{ '/category/#' | prepend: site.baseurl }}{{ category | first }}"><i class="fa fa-angle-right"></i> {{ category | first }}</a>
+            <a href="{{ '/category/#' | prepend: site.baseurl }}{{ category.first }}"><i class="fa fa-angle-right"></i> {% for categoryinfo in site.data.categories %}{% if category.first == categoryinfo.slug %}{{ categoryinfo.name | xml_escape }}{% endif %}{% endfor %}</a>
             <span class="badge badge-theme pull-right">{{ category | last | size }}</span>
         </p>
     {% endfor %}
