Adjust spacing for columns.

--- a/_layouts/member.html
+++ b/_layouts/member.html
@@ -6,11 +6,8 @@ layout: default
 
 <div class="container mtb">
     <div class="row">
-        <div class="col-lg-8">
-
+        <div class="col-lg-6 col-lg-offset-1">
             {{ content }}
-
-            <div class="spacing"></div>
         </div>
         <div class="col-lg-4">
             <h4>Member Info</h4>
