--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,12 +8,12 @@ layout: default
     <div class="row">
         {% include carousel.html %}
 
-        <div class="col-lg-5 col-lg-offset-1">
+        <div class="col-lg-6 col-lg-offset-1">
             <div class="spacing"></div>
 
             {{ content }}
         </div>
-        <div class="col-lg-4 col-lg-offset-1">
+        <div class="col-lg-4">
             <div class="spacing"></div>
             <h4>Project Details</h4>
             <div class="hline"></div>
