--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: default
 <div class="container mtb">
     <div class="row">
         <! -- SINGLE POST -->
-        <div class="col-lg-8">
+        <div class="col-lg-6 col-lg-offset-1">
             <! -- Blog Post  -->
             <p><img class="img-responsive" src="{{ "/assets/img/blog/" | prepend: site.baseurl }}{{ page.img }}"></p>
             <a href="{{ page.url | prepend: site.baseurl }}"><h3 class="ctitle">{{ page.title }}</h3></a>
