--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,13 @@
-<div id="headerwrap">
-</div><!-- /headerwrap -->
+<header id="header">
+	<div class="inner">
+		<a href="{{ "/" | prepend: site.baseurl }}" class="logo">
+			<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Forward Command Post</span>
+		</a>
+
+		<nav>
+			<ul>
+				<li><a href="#menu">Menu</a></li>
+			</ul>
+		</nav>
+	</div>
+</header>
