--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,22 @@
     {% include head.html %}
 
     <body>
-        {% include nav.html %}
+        <div id="wrapper">
+            {% include header.html %}
+            {% include menu.html %}
 
-            {{ content }}
+            <div id="main">
+				<div class="inner">
+                    {% if page.title %}
+                        <h1>{{ page.title }}</h1>
+                    {% endif %}
 
-        {% include footer.html %}
-        {% include js.html %}
+                    {{ content }}
+                </div>
+            </div>
+
+            {% include footer.html %}
+            {% include js.html %}
+        </div>
     </body>
 </html>
