Change subject field to a regular text field.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
 					<input type="email" name="_replyto" id="email" placeholder="Email" />
 				</div>
 				<div class="field">
-					<textarea name="_subject" id="subject" placeholder="Subject"></textarea>
+					<input type="text" name="_subject" id="subject" placeholder="Subject" />
 				</div>
 				<div class="field">
 					<textarea name="message" id="message" placeholder="Message"></textarea>
