Update theme to be dark.

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -34,17 +34,17 @@
 
 // Palette.
 	$palette: (
-		bg:					#ffffff,
-		bg-accent:			#333333,
-		bg-alt:				#f6f6f6,
-		fg:					#585858,
-		fg-accent:			#ffffff,
-		border:				#c9c9c9,
-		border-bg:			rgba(144,144,144,0.075),
-		accent1:			#f2849e,
-		accent2:			#7ecaf6,
-		accent3:			#7bd0c1,
-		accent4:			#c75b9b,
-		accent5:			#ae85ca,
-		accent6:			#8499e7,
+		bg:					#000000,
+		bg-accent:			#cccccc,
+		bg-alt:				#090909,
+		fg:					#a7a7a7,
+		fg-accent:			#000000,
+		border:				#363636,
+		border-bg:			rgba(111,111,111,0.075),
+		accent1:			#7ecaf6,
+		accent2:			#7bd0c1,
+		accent3:			#f2849e,
+		accent4:			#8499e7,
+		accent5:			#c75b9b,
+		accent6:			#ae85ca,
 	);
