--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="header">
 	<div class="inner">
 		<a href="{{ "/" | prepend: site.baseurl }}" class="logo">
-			<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Forward Command Post</span>
+			<span class="symbol"><img src="{{ "/assets/img/logo.png" | prepend: site.baseurl }}" alt="" /></span><span class="title">Forward Command Post</span>
 		</a>
 
 		<nav>
