--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,6 @@
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}" />
 	<!--[if lte IE 9]><link rel="stylesheet" href="{{ "/assets/css/ie9.css" | prepend: site.baseurl }}" /><![endif]-->
 	<!--[if lte IE 8]><link rel="stylesheet" href="{{ "/assets/css/ie8.css" | prepend: site.baseurl }}" /><![endif]-->
+
+    <link rel="shortcut icon" type="image/png" href="{{ "/assets/img/logo.png" | prepend: site.baseurl }}"/>
 </head>
