Update accent colors.

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -41,10 +41,5 @@
 		fg-accent:			#000000,
 		border:				#363636,
 		border-bg:			rgba(111,111,111,0.075),
-		accent1:			#7ecaf6,
-		accent2:			#7bd0c1,
-		accent3:			#f2849e,
-		accent4:			#8499e7,
-		accent5:			#c75b9b,
-		accent6:			#ae85ca,
+		accent1:			#00ff00,
 	);
