--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1294,7 +1294,7 @@ a {
   border-bottom: dotted 1px rgba(167, 167, 167, 0.5); }
   a:hover {
     border-bottom-color: transparent;
-    color: #7ecaf6 !important; }
+    color: #00ff00 !important; }
 
 strong, b {
   font-weight: 900; }
@@ -1447,10 +1447,10 @@ header p {
     .icon.style2:before {
       font-size: 1.1em; }
     .icon.style2:hover {
-      color: #7ecaf6;
-      border-color: #7ecaf6; }
+      color: #00ff00;
+      border-color: #00ff00; }
     .icon.style2:active {
-      background-color: rgba(126, 202, 246, 0.1); }
+      background-color: rgba(0, 255, 0, 0.1); }
 
 /* List */
 ol {
@@ -1628,8 +1628,8 @@ textarea {
   input[type="tel"]:focus,
   select:focus,
   textarea:focus {
-    border-bottom-color: #7ecaf6;
-    box-shadow: inset 0 -1px 0 0 #7ecaf6; }
+    border-bottom-color: #00ff00;
+    box-shadow: inset 0 -1px 0 0 #00ff00; }
 
 .select-wrapper {
   text-decoration: none;
@@ -1719,8 +1719,8 @@ input[type="radio"] {
     content: '\f00c'; }
   input[type="checkbox"]:focus + label:before,
   input[type="radio"]:focus + label:before {
-    border-color: #7ecaf6;
-    box-shadow: 0 0 0 1px #7ecaf6; }
+    border-color: #00ff00;
+    box-shadow: 0 0 0 1px #00ff00; }
 
 input[type="checkbox"] + label:before {
   border-radius: 4px; }
@@ -1872,14 +1872,14 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover {
-    color: #7ecaf6 !important;
-    box-shadow: inset 0 0 0 2px #7ecaf6; }
+    color: #00ff00 !important;
+    box-shadow: inset 0 0 0 2px #00ff00; }
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
   button:active,
   .button:active {
-    background-color: rgba(126, 202, 246, 0.1); }
+    background-color: rgba(0, 255, 0, 0.1); }
   input[type="submit"].small,
   input[type="reset"].small,
   input[type="button"].small,
@@ -1905,13 +1905,13 @@ button,
     input[type="button"].special:hover,
     button.special:hover,
     .button.special:hover {
-      background-color: #7ecaf6; }
+      background-color: #00ff00; }
     input[type="submit"].special:active,
     input[type="reset"].special:active,
     input[type="button"].special:active,
     button.special:active,
     .button.special:active {
-      background-color: #58baf3; }
+      background-color: #00d600; }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
@@ -2031,17 +2031,7 @@ button,
         .tiles article > a .content > :last-child {
           margin-bottom: 0; }
     .tiles article.style1 > .image:before {
-      background-color: #7ecaf6; }
-    .tiles article.style2 > .image:before {
-      background-color: #7bd0c1; }
-    .tiles article.style3 > .image:before {
-      background-color: #f2849e; }
-    .tiles article.style4 > .image:before {
-      background-color: #8499e7; }
-    .tiles article.style5 > .image:before {
-      background-color: #c75b9b; }
-    .tiles article.style6 > .image:before {
-      background-color: #ae85ca; }
+      background-color: #00ff00; }
     body:not(.is-touch) .tiles article:hover > .image {
       -moz-transform: scale(1.1);
       -webkit-transform: scale(1.1);
@@ -2173,7 +2163,7 @@ button,
             background-repeat: no-repeat;
             background-size: 2em 2em; }
           #header nav ul li a[href="#menu"]:before {
-            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %237ecaf6%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %2300ff00%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
             opacity: 0; }
           #header nav ul li a[href="#menu"]:after {
             background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23a7a7a7%3B %7D%3C/style%3E%3Cline x1='0' y1='25' x2='100' y2='25' /%3E%3Cline x1='0' y1='50' x2='100' y2='50' /%3E%3Cline x1='0' y1='75' x2='100' y2='75' /%3E%3C/svg%3E");
@@ -2289,7 +2279,7 @@ button,
       background-repeat: no-repeat;
       background-size: 2em 2em; }
     #menu > .close:before {
-      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %237ecaf6%3B %7D%3C/style%3E%3Cline x1='15' y1='15' x2='85' y2='85' /%3E%3Cline x1='85' y1='15' x2='15' y2='85' /%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %2300ff00%3B %7D%3C/style%3E%3Cline x1='15' y1='15' x2='85' y2='85' /%3E%3Cline x1='85' y1='15' x2='15' y2='85' /%3E%3C/svg%3E");
       opacity: 0; }
     #menu > .close:after {
       background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' preserveAspectRatio='none'%3E%3Cstyle%3Eline %7B stroke-width: 8px%3B stroke: %23a7a7a7%3B %7D%3C/style%3E%3Cline x1='15' y1='15' x2='85' y2='85' /%3E%3Cline x1='85' y1='15' x2='15' y2='85' /%3E%3C/svg%3E");
