Fix link not being closed.

--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -8,7 +8,7 @@ layout: default
     </div>
     <div class="3u$ 12u$(small) important(small)">
         {% if page.website %}
-            <h4><a href="{{ page.website }}">Website</h4>
+            <h4><a href="{{ page.website }}">Website</a></h4>
         {% endif %}
         <h4>Contributors</h4>
         <ul>
